test/errors/expressions_error/zs/index_operators/default_value_expression_error.zs
package index_operators.default_value_expression_error;

struct DefaultValueExpressionError
{
    int32 field[10] = @index;
};
